# cmake_asm

./: CMakeLists.txt  dummy.c
asm-nasm-project/: CMakeLists.txt  hello.asm
asm-project/: CMakeLists.txt  hello.S
